tests/snapshots/examples_fixtures/aoc__2024__day03_test.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2024/day03_test.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `range`.

  examples/aoc/2024/Day03Solver.flx:81:25
   |
81 |         where indices = range(0, len(memory))
   |                         ^^^^^

Hint:
  Define it first: let range = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2024/Day03Solver.flx:82:23
   |
82 |         where state = fold(indices, (0, 0), fn(st, i) {
   |                       ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `range`.

  examples/aoc/2024/Day03Solver.flx:105:25
    |
105 |         where indices = range(0, len(memory))
    |                         ^^^^^

Hint:
  Define it first: let range = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2024/Day03Solver.flx:106:23
    |
106 |         where state = fold(indices, (0, true, 0), fn(st, i) {
    |                       ^^^^

Hint:
  Define it first: let fold = ...;

Found 4 errors.
== stdout ==
<not executed>
